Change form font size to prevent iOS zoom;  Remove heights/padding on inputs that were causing strange behavior on Firefox

--- a/web/app/themes/brian-thompson/assets/styles/components/_forms.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_forms.scss
@@ -81,10 +81,11 @@
     @include copy;
     top: auto;
     line-height: $lh;
+    font-size: 16px !important;
     margin: 0;
-    padding: 12px 5px 14px;
+    padding: 5px;
     width: 100%;
-    height: $lh;
+    // height: $lh;
     border: 1px solid $white;
     border-bottom: 2px solid $white;
     border-radius: 0;
